# knockknock

./: .env.pub  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SHA256SUMS.txt  index.html  package.json  pnpm-lock.yaml  review-diff.txt  vite.config.ts
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-review-diff.patch  latest-changes-diff.patch  merge-to-main-diff.patch  re-review-diff.patch
artifacts/: SHA256SUMS.txt
docs/superpowers/plans/: 2026-06-19-knockknock-ui-shell.md  2026-07-17-portable-app.md
docs/superpowers/specs/: 2026-06-19-knockknock-ui-design.md  2026-07-17-portable-app.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs
src-tauri/src/browser/: detection.rs  mod.rs  paths.rs  process.rs  tests.rs  types.rs
src-tauri/src/commands/: browser.rs  error.rs  mod.rs  pin.rs  settings.rs  shred.rs  tray.rs  updater.rs  vault.rs
src-tauri/src/drive/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/pin/: config.rs  mod.rs
src-tauri/src/shredder/: algorithms.rs  cancel.rs  errors.rs  journal.rs  logging.rs  mod.rs  progress.rs  tests.rs  traits.rs  types.rs  validation.rs  verification.rs
src-tauri/src/shredder/algorithms/: common.rs  dod_522022m.rs  mod.rs  nist_clear.rs  random_only.rs
src-tauri/src/shredder/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/tray/: menu.rs  mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/vault/: crypto.rs  mod.rs  storage.rs
src/components/browser/: BrowserCard.tsx  BrowserWarning.tsx  ProfileItem.tsx
src/components/layout/: AppShell.tsx  LeftSidebar.tsx  OperationLog.tsx  ResizeHandle.tsx  RightSidebar.tsx  Sidebar.tsx  TitleBar.tsx
src/components/settings/: AlgorithmInfo.tsx  ElevationPrompt.tsx  PinSetup.tsx  PinVerify.tsx  ToggleSetting.tsx
src/components/shred/: AlgorithmSelector.tsx  ConfirmationDialog.tsx  DriveGroupHeader.tsx  FileDropZone.tsx  FileList.tsx  FileListItem.tsx  ShredButton.tsx  ShredOptions.tsx
src/components/ui/: alert-dialog.tsx  dialog.tsx  scroll-area.tsx
src/contexts/: BrowserContext.tsx  NavigationContext.tsx  SettingsContext.tsx  ShredContext.tsx
src/hooks/: useBrowserDetection.ts
src/lib/: pin-constants.ts  utils.ts
src/sections/: BrowserSection.tsx  SettingsSection.tsx  ShredSection.tsx
src/test/: sanity.test.ts
src/types/: index.ts
