[package]
name = "knockknock"
version = "0.1.0"
description = "Emergency file shredder with browser profile cleanup"
authors = ["KnockKnock Contributors"]
edition = "2021"
rust-version = "1.77"
license = "MIT"
repository = "https://github.com/knockknockshredder/knockknock"
homepage = "https://knockknockapp.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "knockknock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.8"
getrandom = "0.2"
chacha20 = "0.9"
libc = "0.2"
tokio = { version = "1", features = ["rt"] }
tauri-plugin-dialog = "2.7.1"
bcrypt = "0.15"
dirs = "5"

[dev-dependencies]
tempfile = "3"

